fix:: remove hero image on mobile

--- a/src/pages/Home/HeroSection/HeroSection.css
+++ b/src/pages/Home/HeroSection/HeroSection.css
@@ -293,5 +293,8 @@
   .hero-carousel {
     height: 250px;
   }
+  .hero-image {
+    display: none;
+  }
 }
 
